fix: close the OWLAPI artifact-boundary defects exposed by live IOF Biopharma validation
Live validation of the twelve 0.6.0 tools against a real IOF Biopharma clone exposed an OWLAPI 4
boundary: the loader's illegal-punning repair pollutes an ontology's cached signature with the whole
loaded imports closure, and ontology-level profile violations carry no backing axiom. Fingerprint v1,
semantic_diff, summaries, match-all search, and validation audit signatures now derive from each
document's own axioms and header annotations via one shared core helper, so loaded imports can no
longer change an active document's semantic digest, leak into include_imports=false diffs, or be
flagged against the active scope.

Profile violations without a backing axiom no longer abort run_project_qc and are attributed
owned-versus-imported fail-closed: an undeclared entity used in the audited root's own header
annotations — or any ontology-ID violation — fails the owned gate, while import-header violations
stay imported_violations context. Both profile snapshots now keep the audited root's ontology ID and
every closure header, so run_governance_audit sees the same header violations as run_project_qc
instead of silently dropping them in an anonymous axiom-only merge. get_model_revision and
undo_change state Protégé's retained-dirty-after-Undo semantics explicitly.

Every fix is mutation-verified (its new test fails on the pre-fix code) and live-verified against
the real Biopharma closure, where the owned profile gate now correctly fails on the root header's
two undeclared annotation properties with the 229 import violations kept as context.

Tests: mvn -B clean verify (2,749 tests: 2,741 plugin + 8 CLI; 0 failures, 0 errors, 0 skips)
Tests: bash scripts/check-version-consistency.sh